# Whisper

./: setup.cfg
