[metadata]
name = openai-whisper
version = 20231117
author = OpenAI
license = MIT
description = Robust Speech Recognition via Large-Scale Weak Supervision
url = https://github.com/openai/whisper
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = whisper
packages = find:
install_requires =
    numba
    numpy
    torch
    tqdm
    more-itertools
    tiktoken
    triton<3,>=2.0.0; platform_machine == "x86_64" and sys_platform == "linux" or sys_platform == "linux2"
include_package_data = True
python_requires = >=3.8

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts = whisper=whisper.transcribe:cli

[options.extras_require]
dev = pytest; scipy; black; flake8; isort

[pycodestyle]
# E203 - Whitespace before ':'
# E262 - Inline comment should start with '# '
# E266 - Too many leaning '#' for block comment
# E501 - Line too long
# W503 - Line break before binary operator
ignore = E203,E262,E266,E501,W503
max-line-length = 100

[flake8]
# E203 - Whitespace before ':'
# E262 - Inline comment should start with '# '
# E266 - Too many leaning '#' for block comment
# E501 - Line too long
# W503 - Line break before binary operator
ignore = E203,E262,E266,E501,W503
max-line-length = 100
per-file-ignores =
    */__init__.py: F401


[black]

[isort]
profile = "black"
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[autopep8]
max_line_length = 100

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
explicit_package_bases = true
ignore_missing_imports = true

[tox:tox]
no_package = true
requires = tox>=4
min_version = 4.0

[testenv]
deps =
    transformers
    datasets
    evaluate
    -r requirements.txt
